src/index.css
@import '~antd/dist/antd.css';

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgb(36, 36, 52);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.ant-menu > .ant-menu-item:hover,
.ant-menu > .ant-menu-submenu:hover,
.ant-menu > .ant-menu-item-active,
.ant-menu > .ant-menu-submenu-active,
.ant-menu > .ant-menu-item-open,
.ant-menu> .ant-menu-submenu-open,
.ant-menu > .ant-menu-item-selected,
.ant-menu > .ant-menu-submenu-selected {
  color: white;
  background-color: transparent;

}

.ant-form-item-has-error .ant-input,
 .ant-form-item-has-error .ant-input-affix-wrapper,
  .ant-form-item-has-error .ant-input:hover,
   .ant-form-item-has-error .ant-input-affix-wrapper:hover {
     background-color: rgb(38, 41, 56);
   }

.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item:hover,
.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover,
.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-active,
.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-active,
.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-open,
.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-open,
.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-selected,
.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-selected {
  border-bottom-color: white;
  color: white;
}

.ant-card-actions {
  background-color: transparent;
}

.ant-popover-inner-content {

}

.ant-popover-title {

}

.ant-popover-placement-rightTop > .ant-popover-content > .ant-popover-arrow {

}

.ant-spin-dot-item {
  background-color: white;
}

.ant-card-actions > li > span > .anticon {
  color: white;
}


.ant-tag-close-icon {
  color: white;
}

.ant-tag-close-icon :hover {
  color: #40a9ff
}

.ant-modal-header {
  background-color: rgb(36, 36, 52);
  color: white;
  border-bottom: white;
}

.ant-modal-title {
  color: white;
}

.ant-modal-close-x {
  color: white;
}

.ant-modal-footer {
  border-top-color: rgb(38, 41, 56);
}

.ant-btn {
  color: white;
  background-color: rgb(36, 36, 52);
  border-radius: 1.2vh;
  border-color: white;
}

.ant-btn:hover, .ant-btn:focus, .ant-btn:after {
  background: rgb(36, 36, 52);
  color: white;
}

.ant-modal-content {
  color: rgb(36, 36, 52);
  background-color: rgb(36, 36, 52);
}

.ant-menu-vertical
.ant-menu-item::after,
.ant-menu-vertical-left
.ant-menu-item::after,
.ant-menu-vertical-right
.ant-menu-item::after,
.ant-menu-inline
.ant-menu-item::after {
  border-right-color: rgb(38, 41, 56);
  border-right-width: 0;
  background-color: transparent;

}

.ant-card-body {
  border-top-color: rgb(38, 41, 56);
}

.ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
  background-color: transparent;
}

::selection {
  color: transparent;
}

.site-layout .site-layout-background {
  background: rgb(36, 36, 52);
  color: white
}

.ant-menu {
  background-color:rgb(36, 36, 52);
  color: rgb(190, 190, 194);

  border-right-color: rgb(38, 41, 56);
  border-right-width: 0;
}

.ant-card-meta-title {
  color: white;
  margin: 0;
}

.ant-card-meta-description {
  color: white;
  margin: 0;
  font-size: 12px;

}

.ant-input {
  background-color: rgb(36, 36, 52);
  color: white;
}

.ant-layout-sider-children {
  background-color: rgb(36, 36, 52);
}

.ant-layout {
  background-color: rgb(36, 36, 52);
  color: white;
}

